--- a/ME5401_report/ref_5401.bib
+++ b/ME5401_report/ref_5401.bib
@@ -5,6 +5,18 @@
 	publisher={Lippincott Williams \& Wilkins}
 }
 
+@article{kautsky1985robust,
+	title={Robust pole assignment in linear state feedback},
+	author={Kautsky, Jaroslav and Nichols, Nancy K and Van Dooren, Paul},
+	journal={International Journal of control},
+	volume={41},
+	number={5},
+	pages={1129--1155},
+	year={1985},
+	publisher={Taylor \& Francis}
+}
+
+
 
 
 
